basic func of the web app!

--- a/web/src/pages/About/About.css
+++ b/web/src/pages/About/About.css
@@ -1,4 +1,9 @@
-h2 {
-    text-align: center;
-    font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, sans-serif;
+body {
+	background-image: url("https://sm.mashable.com/mashable_in/photo/default/nasa-galaxy_9pu4.jpg");
+}
+
+.header {
+	text-align: center;
+	padding-top: 30px;
+	font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, sans-serif;
 }
